RESOLVED FIXED Bug 69658
[CSS3 Regions] Box painting incorrect for overflow into variable width regions
https://bugs.webkit.org/show_bug.cgi?id=69658
Summary [CSS3 Regions] Box painting incorrect for overflow into variable width regions
Dave Hyatt
Reported 2011-10-07 13:03:18 PDT
Box painting is incorrect for overflow into variable width regions. This is because we were clamping the region range for children to their containing block ranges. It's better to have the range for a box be completely accurate and unclamped, and only when querying containing block region info should we clamp. This fixes overflow rendering to be fully correct.
Attachments
Patch (169.43 KB, patch)
2011-10-07 13:06 PDT, Dave Hyatt
andersca: review+
Dave Hyatt
Comment 1 2011-10-07 13:06:11 PDT
Dave Hyatt
Comment 2 2011-10-07 13:28:51 PDT
Fixed in r96975.
Note You need to log in before you can comment on or make changes to this bug.